# EdgeMind

./: .gitignore  BENCHMARK.md  README.md  benchmark.py  config.py  formatter.py  install.bat  install.sh  models_cache.py  parse.py  pyproject.toml  quantize.py  requirements.txt  respond.py  run.py  search.py  serve.py  store.py
data/: knowledge.idx
data/docs/: robotics.txt  sjit.txt
edgemind/: __init__.py  cli.py
edgemind/core/: config.py  models_cache.py
edgemind/generation/: respond.py
edgemind/ingestion/: parse.py  store.py
edgemind/retrieval/: search.py
